updated typescript config file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,8 @@
         "name": "next"
       }
     ],
+     "typeRoots": ["./node_modules/@types"],
+    "types": ["jest"],
     "paths": {
       "@/*": ["./src/*"]
     }
